# SplashExample

./: .gitignore  LICENSE  LICENSE.txt  Plugin.cryproject  SplashExamplePlugin.cryproject  SplashExamplePlugin_GameSDK.cryproject  SplashExamplePlugin_GameZero.cryproject  cryplugin.csv  license.txt  readme.md
Assets/: SplashExample.cfg
Assets/SplashExample/textures/: InitialSplash.dds  InitialSplash.dds.cryasset  InitialSplash.tif  Splash.dds  Splash.tif  splash.dds.cryasset  splash.tif  splash_a.dds.cryasset  splash_a.tif  splash_a_1024x576.dds  splash_a_1024x576.dds.cryasset  splash_a_1024x576.tif  splash_a_fullscreen.dds.cryasset
Code/: CMakeLists.txt  Plugin.cpp  Plugin.h  Plugin.vcxproj.user.in  SplashExample.cpp  SplashExample.h  SplashExample.vcxproj.user.in  SplashExampleCVars.h  SplashExamplePlugin.cpp  SplashExamplePlugin.h  StdAfx.cpp  StdAfx.h  cvars.h
Code/Helpers/: debug.h
Code/Interface/: ICryFreeVideoPlugin.h  ICryFreeVideoSystem.h  ISplashExample.h  ISplashExamplePlugin.h
Code/Main/: Plugin.cpp  Plugin.h
Code/System/: CryFreeVideoSystem.cpp  CryFreeVideoSystem.h  SplashExample.cpp  SplashExample.h
Docs/: CONCEPT.txt  INSTALL.txt  MIGRATION_NOTES.txt
